tests/paczka1/small_fuzzy/42188578.err
Error in line 6: llQ9bViiM A199 1,10
Error in line 5: Ij8N1D8HPXh S871 3,5
Error in line 9: Ij8N1D8HPXh A429 27,8
Error in line 11: llQ9bViiM A199 4,2
Error in line 12: llQ9bViiM S871 17,5
Error in line 8: vh4u6XDjbe A20 34,6
